--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,14 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Set deep sleep time to 20 mins (unit is milliseconds)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=72000
+
+# Set board name
+CONFIG_ZMK_KEYBOARD_NAME="Corne View"
+
+# Set bluetooth power boost
+CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
+
