--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,5 +13,5 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
 CONFIG_ZMK_KEYBOARD_NAME="Corne View"
 
 # Set bluetooth power boost
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
